@startuml Diagram

entity Users {
    id: String [PK]
    email: String
    fullName: String
    password: String
    role: String
    image_url: String
    image_id: String
}

entity Houses {
    id: String [PK]
    title: String
    description: String
    price: Number
    location: String
    ' location: {
    '     address: String
    '     city: String
    '     state: String
    '     zipCode: string
    '     coordinates: {
    '         latitude: Number
    '         longitude: Number
    '     }
    ' }
    bedrooms: Number
    bathrooms: Number
    images: [String]
    --
    seller_id: String [FK]
}

entity Favorites {
    id: String [PK]
    --
    user_id: String [FK]
    house_id: String [FK]
}

entity Appointments {
    id: String [PK]
    status: String
    date: Date
    message: String
    --
    house_id: String [FK]
    customer_id: String [FK]
    seller_id: String [FK]
}

entity Conversations {
    id: String [PK]
    --
    user_id: String [FK]
    target_id: String [FK]
}

entity Messages {
    id: String [PK]
    message: String
    statusMessage:String
    --
    conversation_id: String [FK]
    user_id: String [FK]
}

Users ||--o{ Favorites
Users ||--o{ Houses
Users }|--o{ Messages
Users ||--o{ Conversations
Users ||--o{ Conversations

Houses ||--o{ Favorites
Houses ||--o{ Appointments

Conversations }|--o{ Messages

@enduml